# student_repositories

./: README.md
blyumin_sem/: README.md
blyumin_sem/job-scripts/: run-gpu.sh  run-gpu_test.sh  run.sh  run_test.sh  strong-scaling.sh  weak-scaling.sh
bolliger_bsc/: README.md
bolliger_bsc/Iterations/: Iterations.csv
buehler_bsc/: .gitignore  README.md
buehler_bsc/thesis/: lukasbuehler_style.sty  thesis.bib  thesis.tex
claglu-msc/: .gitignore  README.md  requirements.txt
claglu-msc/data_visualization/: README.md
claglu-msc/generalizedHessian/: Makefile  README.md  convergence.h  main.cpp
claglu-msc/matlab_maxwellian_test/: BiharmonicGood.m
claglu-msc/report/: report.tex
claglu_msc/generalizedHessian/: field.h  hessian.h
claglu_msc/matlab_maxwellian_test/: FirstIdentityTest.m  SecondIdentityTest.m
claglu_msc/report/: references.bib
crazzolara-sem/: README.md
crazzolara-sem/Jobscripts/: scaling_job_CPU.sh  scaling_job_GPU.sh  strong_scaling_GPU.sh
crazzolara-sem/Notebooks/: plots.ipynb  (+1 more)
pietak_sem/: readme.md
prior_sem/: README.md
veronica-msc/: README.md
winkler_msc/: README.md  bench1gpu.slurm  bench2gpu.slurm  bench4gpu.slurm  bench8gpu.slurm  book.typ  mithranotes.typ
winkler_msc/experiments/: CMakeLists.txt  Makefile  boris.cpp  boris_gammaplot.gp  bunch.cu  bunch_impl.cu  cfg.cpp  cfg.hpp  common.cu  config_reference.json  erfinv.cpp  grid.cu  gridtest.cu  logvar.cpp  mpi_schtuff.cu  murabc_eigenvalues.cpp  normal.cu  shared_mem.cu  snail_index.cpp  thruscht_tescht.cu
winkler_msc/experiments/fft_vs_stencil/: bench.cu  plot.gp
(+411 files in other folders)
